add updated method to bypass need for lst_finalb

--- a/Assignments/HW_25Sep/HW_25sep_Ex2.ipynb
+++ b/Assignments/HW_25Sep/HW_25sep_Ex2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "source": [
     "import re\n",
     "from Bio import SeqIO\n",
@@ -18,15 +18,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 61,
    "source": [
     "seq_ = 0\n",
     "seq_string = \"\"\n",
     "human_genome = SeqIO.parse(\"files/GCA_000001405.28_GRCh38.p13_genomic.fna\", \"fasta\")\n",
     "for chromosome in human_genome:\n",
     "    if chromosome.name == \"CM000664.2\":\n",
-    "        seq_string = str(chromosome.seq).lower()\n",
-    "        seq_ = seq_string.encode('utf8')\n",
+    "        seq_ = str(chromosome.seq).lower().encode('utf8')\n",
     "        break"
    ],
    "outputs": [],
@@ -54,17 +53,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 64,
    "source": [
-    "seq_string = seq_string[9999:-9999] #first and last 10000 bps are n's but will leave one n at the beginning and one n at the end.\n",
-    "seq_ = seq_[9999:-9999]"
+    "#seq_string = seq_string[9999:-9999] \n",
+    "\n",
+    "seq_ = seq_[9999:-9999] #first and last 10000 bps are n's but will leave one n at the beginning and one n at the end."
    ],
    "outputs": [],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 66,
    "source": [
     "from hashlib import sha256\n",
     "p = 2_549_536_629_329\n",
@@ -77,6 +77,13 @@
     "    return ((sha_value * a) % p) & scale"
    ],
    "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "#### Since I'd been tinkering with multiprocessing and this process takes a lot of time I thought it would be prudent to take all sha values in a list first even though I take extra memory here, I could have instead directly calculated hash value here rather than storing it in a list. I've rewritten the corrected code after the \"Run over all sha values in lst_finalb\" section."
+   ],
    "metadata": {}
   },
   {
@@ -98,7 +105,7 @@
     "            pass\n",
     "        else:\n",
     "            nmerb_sha = getshavalues(nmerb)\n",
-    "            seqb_sha_values.append(nmerb_sha)\n",
+    "            seqb_sha_values.append(nmerb_sha) ## I could have just run the hash value estimation part here and not save this as an array, however I wanted to tinker with multiprocessing and also see what the true value comes out to be so went with this instead.\n",
     "    return seqb_sha_values,counter_\n",
     "\n",
     "lst_finalb,sequence_count = getNmers(seq_)"
@@ -138,11 +145,12 @@
   {
    "cell_type": "markdown",
    "source": [
-    "## Run tests on smaller pieces of data\n",
+    "## Run tests on a much smaller piece of data\n",
+    "#### **Note: Ran the same test for the new function getnMers_updated below, with random sample of 10000 base pairs from seq_\n",
     "## Ran the test 100 times and take mean of values generated in the tests. I used the following 2 methods to test:\n",
-    "#### For the test I thought I should randomly pull 100 sha values from lst_finalb, compute for each sha value, the 100 hashes, and for each hash function we store the minimum most value, to estimate unique elements we take the average of these hash values, subtract one from inverse of average and see how deviated that value is from 100.\n",
+    "#### For the test I thought I should randomly pull 100 sha values from lst_finalb, compute the 100 hashes for each sha value, and for each hash function we store the minimum most value, to estimate unique elements we take the average of these hash values, subtract one from inverse of average and see how deviated that value is from 100.\n",
     "\n",
-    "#### The other test is to take calculate estimate based on each hash value, and take median of these values.\n",
+    "#### The other test is to calculate estimate based on each hash value, and take median of these values.\n",
     "\n",
     "* method 1: 1/avg(hash_values) - 1\n",
     "* method 2: median(1/hash_value - 1 for all hash_values)\n"
@@ -153,8 +161,8 @@
    "cell_type": "code",
    "execution_count": 141,
    "source": [
-    "deviations_avg_method = []\n",
-    "deviations_estimates_method = []\n",
+    "avg_method = []\n",
+    "estimates_method = []\n",
     "for i in tqdm(range(100)):\n",
     "    sample_sha_vals = np.random.choice(lst_finalb,100)\n",
     "    min_hashes = []\n",
@@ -170,11 +178,11 @@
     "    min_hashes = sorted(min_hashes)\n",
     "    estimates_ = [(1/min_hash) -1 for min_hash in min_hashes]\n",
     "    median_estimate = statistics.median(estimates_)\n",
-    "    deviations_estimates_method.append(median_estimate)\n",
+    "    estimates_method.append(median_estimate)\n",
     "    mean_val = len(min_hashes)/sum(min_hashes) - 1\n",
-    "    deviations_avg_method.append(mean_val)\n",
-    "print(\"Thus estimate based on inverse of average hash value is:\", statistics.mean(deviations_avg_method))\n",
-    "print(\"Thus estimate based on median of estimate of each individual hash value is:\", statistics.mean(deviations_estimates_method))"
+    "    avg_method.append(mean_val)\n",
+    "print(\"Thus estimate based on inverse of average hash value is:\", statistics.mean(avg_method))\n",
+    "print(\"Thus estimate based on median of estimate of each individual hash value is:\", statistics.mean(estimates_method))"
    ],
    "outputs": [
     {
@@ -199,6 +207,13 @@
       "Thus estimate based on median of estimate of each individual hash value is: 150.6541031693754\n"
      ]
     }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Run over all sha values in lst_finalb"
    ],
    "metadata": {}
   },
@@ -232,6 +247,95 @@
       ]
      },
      "metadata": {}
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## **Corrected code bypassing the need for lst_finalb"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "source": [
+    "\n",
+    "def getNmers_updated(seq_,interval = 15,disable_ = False):\n",
+    "    min_hashes = np.full((100,1),np.inf)\n",
+    "    counter_ = 0\n",
+    "    for i in tqdm(range(len(seq_) - interval + 1),disable = disable_):\n",
+    "        nmerb = seq_[i:i+interval]\n",
+    "        \n",
+    "        #print(nmer)\n",
+    "        if((nmerb.count(b\"n\")>2)):\n",
+    "            # print(nmer)\n",
+    "            # print(nmerb)\n",
+    "            pass\n",
+    "        else:\n",
+    "            counter_+=1\n",
+    "            nmerb_sha = getshavalues(nmerb)\n",
+    "            for a in range(1,101):\n",
+    "                hshval = hash_fn(nmerb_sha,a)\n",
+    "                hshval/=scale\n",
+    "                if(hshval < min_hashes[a-1]):\n",
+    "                    min_hashes[a-1] = hshval\n",
+    "            \n",
+    "    return min_hashes,counter_"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Run test for getNmers_updated, will run for randomly selected sequence of 10000 base pairs"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "source": [
+    "avg_method = []\n",
+    "estimates_method = []\n",
+    "for test_num in tqdm(range(100)):\n",
+    "    upr_bound = int(np.random.uniform(low=0.1, high=1, size=1)[0]*100000)\n",
+    "    lwr_bound = upr_bound - 10000\n",
+    "    seq_smpl = seq_[lwr_bound:upr_bound+1]\n",
+    "    min_hashes,counter_ = getNmers_updated(seq_smpl,disable_ = True)\n",
+    "    estimates_ = [(1/min_hash) -1 for min_hash in min_hashes]\n",
+    "    median_estimate = statistics.median(estimates_)\n",
+    "    estimates_method.append(median_estimate[0])\n",
+    "    mean_val = len(min_hashes)/sum(min_hashes) - 1\n",
+    "    avg_method.append(mean_val[0])\n",
+    "print(\"Thus estimate based on inverse of average hash value is:\", statistics.mean(avg_method))\n",
+    "print(\"Thus estimate based on median of estimate of each individual hash value is:\", statistics.mean(estimates_method))\n"
+   ],
+   "outputs": [
+    {
+     "output_type": "display_data",
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "89967f0bbeac41309a1244b7a1e8a8a1"
+      },
+      "text/plain": [
+       "  0%|          | 0/100 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {}
+    },
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Thus estimate based on inverse of average hash value is: 9967.841176434398\n",
+      "Thus estimate based on median of estimate of each individual hash value is: 14899.245217796313\n"
+     ]
     }
    ],
    "metadata": {}
@@ -309,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 3,
    "source": [
     "min_hashes_unsorted = list(np.genfromtxt('hashes.csv',delimiter=','))\n",
     "min_hashes_unsorted"
@@ -422,14 +526,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 77
+     "execution_count": 3
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 5,
    "source": [
     "# average of all values\n",
     "len(min_hashes)/sum(min_hashes) - 1"
@@ -443,14 +547,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 79
+     "execution_count": 5
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 7,
    "source": [
     "estimates_unsorted = [1/hash_val - 1 for hash_val in min_hashes_unsorted]\n",
     "scatterplt = sns.scatterplot(x = list(range(1,101)),y = estimates_unsorted)\n",
@@ -466,7 +570,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 114
+     "execution_count": 7
     },
     {
      "output_type": "display_data",
@@ -534,7 +638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 9,
    "source": [
     "medians = [statistics.median(estimates_unsorted[0:i]) for i in range(1,101)]\n",
     "scatterplot_ = sns.scatterplot(x = list(range(1,101)),y = medians)\n",
@@ -551,7 +655,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 142
+     "execution_count": 9
     },
     {
      "output_type": "display_data",
