add heatmaps and correlation matrix for q4

--- a/Assignments/HW_25Sep/HW_25Sep_Ex3.ipynb
+++ b/Assignments/HW_25Sep/HW_25Sep_Ex3.ipynb
@@ -3,9 +3,8 @@
   {
    "cell_type": "markdown",
    "source": [
-    "## Here what's probably gone wrong is that the user loaded the entire file into memory and then is iterating through it line by line and appending weights to a list.\n",
     "\n",
-    "#### Possible remedies:\n",
+    "## Possible solutions to the memory problem:\n",
     "\n",
     "* One possible issue could be that 32-bit python has access to about just 4 GB data at a time, so switching over to 64-bit could help\n",
     "* The user seems to be using lists, switching over to np arrays with dtype float could help bring down the overhead associated with storing float values in a list, it could possibly more than halve the memory being taken.\n",
