--- a/Assignments/HW_25Sep/HW_25sep_Ex2.ipynb
+++ b/Assignments/HW_25Sep/HW_25sep_Ex2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 123,
    "source": [
     "import re\n",
     "from Bio import SeqIO\n",
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 124,
    "source": [
     "seq_ = 0\n",
     "seq_string = \"\"\n",
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 125,
    "source": [
     "# Counting ns at the beginning and end of the string\n",
     "print(\"number of ns in first 10000 bases: \",seq_string[:10000].count('n'))\n",
@@ -58,8 +58,8 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "number of ns in first 10000 bases:  10000\n",
-      "number of ns in last 10000 bases:  10000\n"
+      "number of ns in first 10000 bases:  0\n",
+      "number of ns in last 10000 bases:  0\n"
      ]
     }
    ],
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 126,
    "source": [
     "#seq_string = seq_string[9999:-9999] \n",
     "\n",
@@ -158,13 +158,6 @@
       "Total 15mers with duplicates but without nmers with >2ns : 240548029\n"
      ]
     }
-   ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "## Calling np unique on lst_finalb revealed close to 145 million unique vals"
    ],
    "metadata": {}
   },
@@ -380,10 +373,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 127,
    "source": [
     "import csv\n",
-    "file = open('hashes.csv', 'w', newline ='')\n",
+    "file = open('hashes.csv', 'a', newline ='')\n",
     "\n",
     "with file:    \n",
     "    write = csv.writer(file)\n",
@@ -415,6 +408,13 @@
       "lower bound of estimate 37633885.491785325\n"
      ]
     }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Calling np unique on lst_finalb revealed close to 145 million unique vals"
    ],
    "metadata": {}
   },
@@ -451,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 128,
    "source": [
     "min_hashes_unsorted = list(np.genfromtxt('hashes.csv',delimiter=','))\n",
     "min_hashes_unsorted"
@@ -461,110 +461,110 @@
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "[1.5133991837941983e-08,\n",
-       " 5.15137799099179e-09,\n",
-       " 8.149072528122606e-10,\n",
-       " 1.030275598198358e-08,\n",
-       " 1.862645149285167e-09,\n",
-       " 9.255018085510674e-09,\n",
-       " 1.7666025087751507e-08,\n",
-       " 1.8335413188275864e-09,\n",
-       " 7.275957614395184e-10,\n",
-       " 1.2136297300811167e-08,\n",
-       " 2.6571797207771212e-08,\n",
-       " 1.2922100723165847e-08,\n",
-       " 8.731149137274221e-09,\n",
-       " 1.3387762010487139e-09,\n",
-       " 2.2700987756912975e-09,\n",
-       " 3.667082637655173e-09,\n",
-       " 2.648448571639847e-08,\n",
-       " 3.6088749767400113e-09,\n",
-       " 2.415617927979201e-09,\n",
-       " 8.440110832698414e-10,\n",
-       " 2.7357600630125892e-09,\n",
-       " 2.0343577489848935e-08,\n",
-       " 6.606569513870827e-09,\n",
-       " 3.8126017899430765e-09,\n",
-       " 4.947651177788725e-09,\n",
-       " 2.3865140975216204e-09,\n",
-       " 2.561137080267105e-09,\n",
-       " 3.5797711462824306e-09,\n",
-       " 6.693881005243569e-09,\n",
-       " 2.852175384842912e-09,\n",
-       " 2.5989720598619598e-08,\n",
-       " 7.334165275310346e-09,\n",
-       " 1.8306309357818283e-08,\n",
-       " 6.72298483570115e-09,\n",
-       " 7.770722732174057e-09,\n",
-       " 6.8976078184466346e-09,\n",
-       " 8.149072528122606e-10,\n",
-       " 1.702574081768473e-08,\n",
-       " 2.4738255888943626e-09,\n",
-       " 1.6880221665396827e-09,\n",
-       " 1.891748979742748e-09,\n",
-       " 3.6088749767400113e-09,\n",
-       " 4.8021320255008215e-09,\n",
-       " 2.7939677239277507e-09,\n",
-       " 1.300941221453859e-08,\n",
-       " 8.643837645901479e-09,\n",
-       " 5.93718141334647e-09,\n",
-       " 1.105945557388068e-09,\n",
-       " 3.521563485367269e-09,\n",
-       " 9.89530235557745e-09,\n",
-       " 3.201421350333881e-09,\n",
-       " 8.818460628646963e-09,\n",
-       " 1.1932570487608102e-09,\n",
-       " 9.89530235557745e-10,\n",
-       " 8.731149137274221e-11,\n",
-       " 7.1304384621072805e-09,\n",
-       " 9.313225746425836e-10,\n",
-       " 1.891748979742748e-08,\n",
-       " 4.074536264061303e-10,\n",
-       " 2.532033249809524e-09,\n",
-       " 9.167706594137932e-09,\n",
-       " 9.429641068256159e-09,\n",
-       " 2.9103830457580737e-09,\n",
-       " 2.572778612450137e-08,\n",
-       " 2.048909664213684e-08,\n",
-       " 1.7258571461345377e-08,\n",
-       " 4.074536264061303e-10,\n",
-       " 2.532033249809524e-09,\n",
-       " 1.4842953533366176e-09,\n",
-       " 8.352799341325671e-09,\n",
-       " 1.4755642041993433e-08,\n",
-       " 1.143780536982923e-08,\n",
-       " 2.4330802262537496e-08,\n",
-       " 1.6298145056245212e-09,\n",
-       " 1.3358658180029558e-08,\n",
-       " 1.3184035197284074e-08,\n",
-       " 7.974449545377122e-09,\n",
-       " 4.947651177788725e-09,\n",
-       " 7.072230801192119e-09,\n",
-       " 3.3760443330793654e-09,\n",
-       " 7.0140231402769575e-09,\n",
-       " 2.2642780095997813e-08,\n",
-       " 9.89530235557745e-09,\n",
-       " 4.976755008246306e-09,\n",
-       " 1.6880221665396827e-09,\n",
-       " 4.889443516873564e-09,\n",
-       " 3.0559021980459773e-09,\n",
-       " 1.2601958588132459e-08,\n",
-       " 1.1641532183032295e-09,\n",
-       " 1.1350493878456487e-09,\n",
+       "[8.731149137274221e-11,\n",
        " 1.1641532183032295e-10,\n",
-       " 3.899913281315819e-09,\n",
-       " 5.2386894823645326e-09,\n",
-       " 1.187436282669294e-08,\n",
-       " 1.4377292246044884e-08,\n",
+       " 4.074536264061303e-10,\n",
+       " 4.074536264061303e-10,\n",
+       " 7.275957614395184e-10,\n",
+       " 8.149072528122606e-10,\n",
+       " 8.149072528122606e-10,\n",
+       " 8.440110832698414e-10,\n",
+       " 9.313225746425836e-10,\n",
+       " 9.89530235557745e-10,\n",
+       " 1.105945557388068e-09,\n",
+       " 1.1350493878456487e-09,\n",
+       " 1.1641532183032295e-09,\n",
+       " 1.1932570487608102e-09,\n",
+       " 1.3387762010487139e-09,\n",
+       " 1.4842953533366176e-09,\n",
+       " 1.6298145056245212e-09,\n",
+       " 1.6880221665396827e-09,\n",
+       " 1.6880221665396827e-09,\n",
+       " 1.8335413188275864e-09,\n",
+       " 1.862645149285167e-09,\n",
+       " 1.891748979742748e-09,\n",
        " 2.211891114776136e-09,\n",
-       " 1.0710209608389711e-08,\n",
+       " 2.2700987756912975e-09,\n",
+       " 2.328306436606459e-09,\n",
+       " 2.3865140975216204e-09,\n",
+       " 2.415617927979201e-09,\n",
+       " 2.4738255888943626e-09,\n",
+       " 2.532033249809524e-09,\n",
+       " 2.532033249809524e-09,\n",
+       " 2.561137080267105e-09,\n",
+       " 2.7357600630125892e-09,\n",
+       " 2.7939677239277507e-09,\n",
+       " 2.852175384842912e-09,\n",
+       " 2.9103830457580737e-09,\n",
+       " 3.0559021980459773e-09,\n",
+       " 3.201421350333881e-09,\n",
+       " 3.3760443330793654e-09,\n",
+       " 3.521563485367269e-09,\n",
+       " 3.5797711462824306e-09,\n",
+       " 3.6088749767400113e-09,\n",
+       " 3.6088749767400113e-09,\n",
+       " 3.667082637655173e-09,\n",
        " 3.754394129027915e-09,\n",
+       " 3.8126017899430765e-09,\n",
+       " 3.899913281315819e-09,\n",
+       " 4.8021320255008215e-09,\n",
+       " 4.889443516873564e-09,\n",
+       " 4.947651177788725e-09,\n",
+       " 4.947651177788725e-09,\n",
+       " 4.976755008246306e-09,\n",
+       " 5.15137799099179e-09,\n",
+       " 5.2386894823645326e-09,\n",
+       " 5.93718141334647e-09,\n",
+       " 6.606569513870827e-09,\n",
+       " 6.693881005243569e-09,\n",
+       " 6.72298483570115e-09,\n",
+       " 6.8976078184466346e-09,\n",
+       " 7.0140231402769575e-09,\n",
+       " 7.072230801192119e-09,\n",
+       " 7.1304384621072805e-09,\n",
+       " 7.334165275310346e-09,\n",
+       " 7.770722732174057e-09,\n",
+       " 7.974449545377122e-09,\n",
+       " 8.352799341325671e-09,\n",
+       " 8.643837645901479e-09,\n",
+       " 8.731149137274221e-09,\n",
+       " 8.818460628646963e-09,\n",
+       " 9.167706594137932e-09,\n",
+       " 9.255018085510674e-09,\n",
        " 9.284121915968255e-09,\n",
-       " 2.328306436606459e-09]"
+       " 9.429641068256159e-09,\n",
+       " 9.89530235557745e-09,\n",
+       " 9.89530235557745e-09,\n",
+       " 1.030275598198358e-08,\n",
+       " 1.0710209608389711e-08,\n",
+       " 1.143780536982923e-08,\n",
+       " 1.187436282669294e-08,\n",
+       " 1.2136297300811167e-08,\n",
+       " 1.2601958588132459e-08,\n",
+       " 1.2922100723165847e-08,\n",
+       " 1.300941221453859e-08,\n",
+       " 1.3184035197284074e-08,\n",
+       " 1.3358658180029558e-08,\n",
+       " 1.4377292246044884e-08,\n",
+       " 1.4755642041993433e-08,\n",
+       " 1.5133991837941983e-08,\n",
+       " 1.702574081768473e-08,\n",
+       " 1.7258571461345377e-08,\n",
+       " 1.7666025087751507e-08,\n",
+       " 1.8306309357818283e-08,\n",
+       " 1.891748979742748e-08,\n",
+       " 2.0343577489848935e-08,\n",
+       " 2.048909664213684e-08,\n",
+       " 2.2642780095997813e-08,\n",
+       " 2.4330802262537496e-08,\n",
+       " 2.572778612450137e-08,\n",
+       " 2.5989720598619598e-08,\n",
+       " 2.648448571639847e-08,\n",
+       " 2.6571797207771212e-08]"
       ]
      },
      "metadata": {},
-     "execution_count": 3
+     "execution_count": 128
     }
    ],
    "metadata": {}
