add column descriptions to Ex4

--- a/Assignments/HW_25Sep/HW_25Sep_Ex4.ipynb
+++ b/Assignments/HW_25Sep/HW_25Sep_Ex4.ipynb
@@ -16,8 +16,9 @@
    "cell_type": "markdown",
    "source": [
     "## Acknowledgements\n",
-    "UC Irvine ML Repository\\\n",
-    "Creators:\n",
+    "#### UC Irvine ML Repository\n",
+    "\n",
+    "#### Creators:\n",
     "\n",
     "Hungarian Institute of Cardiology. Budapest: Andras Janosi, M.D.\n",
     "University Hospital, Zurich, Switzerland: William Steinbrunn, M.D.\n",
@@ -26,11 +27,18 @@
     "Donor:\n",
     "David W. Aha (aha '@' ics.uci.edu) (714) 856-8779\n",
     "\n",
-    "License: \\\n",
+    "#### License:\n",
     "Reddit API Terms\n",
     "\n",
-    "Url\n",
+    "#### Url:\n",
     "https://archive.ics.uci.edu/ml/datasets/Heart+Disease"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "#### According to the source the dataset has 76 columns, but columns such as social security numbers and other patient details were removed to randomize the data. The dataset here has 14 of the most relevant columns and 303 patients. The data happens to be quite old though from 07-01-1988."
    ],
    "metadata": {}
   },
@@ -310,6 +318,13 @@
    "metadata": {}
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "#### The unique columns are given below:"
+   ],
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
    "source": [
@@ -327,6 +342,47 @@
      },
      "metadata": {},
      "execution_count": 8
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "#### A brief description of the columns are:\n",
+    "* age is numeric in years presumably\n",
+    "* sex has been labelled 0 or 1\n",
+    "* cp is chest pain type -> 4 types -> 0,1,2,3\n",
+    "* trestbps is the resting blood pressure, it varies between 94 and 200 (checked by doing df_data['trestbps'].min() and df_data['trestbps'].max()) -> needs to be scaled\n",
+    "* chol is the serum cholestoral level in mg/dl -> needs to be scaled\n",
+    "* fbs represents fasting blood sugar thats greater than 120 mg/dl -> coded as 0 or 1\n",
+    "* restecg is the resting electrocardiographic results with classes 0,1 and 2\n",
+    "* thalach: The maximum heart rate achieved -> needs to be scaled\n",
+    "* exang: exercise induced angina -> The 2 classes are 0,1\n",
+    "* oldpeak: ST depression induced by exercise relative to rest -> needs to be scaled\n",
+    "* slope: the slope of the peak exercise ST segment -> 3 variables 0,1,2\n",
+    "* ca: number of major vessels colored by flourosopy -. labelled as 0,1,2,3,4 -> labelled as ordinal when it might not be so\n",
+    "* thal -> labelled as 0,1,2,3 -> labelled as ordinal when it might not be so\n",
+    "* target: target variable -> 1 is for heart disease and 0 for not having heart disease"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "source": [
+    "df_data['thal'].unique()"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "array([1, 2, 3, 0])"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 70
     }
    ],
    "metadata": {}
@@ -552,6 +608,13 @@
      "metadata": {},
      "execution_count": 54
     }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Check correlation between each of the variables"
    ],
    "metadata": {}
   },
@@ -929,6 +992,27 @@
       "needs_background": "light"
      }
     }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "#### While there are no variables to my knowledge that can be derived from one another, some of these variables are clearly correlated. The two variables with the highest positive correlation are slope and oldpeak which can sort of qualitatively be described as that oldpeak monitors depression in ST segment of the sinus rhythm caused by exercise in comparison to resting state and slope montiors slope of ST segments during exercise so there's a dependence."
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "#### Some of these variables are nominal in nature while some like resting blood pressure have very different ranges and scales. One possible solution could be to scale these variables to be between 0 and 1. Since some variables may not be ordinal in nature we could explore one hot encoding for such variables."
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "#### Since this data comes from the UCI ml repository I think they chose these 14 variables because many of them show either a moderately strong positive or negative correlation with the target variable. With some of these variables the correlation is to be expected, for instance, chest pain on a scale of 1 to 4 and heart disease are somewhat related. One caveat is that the data is too less here."
    ],
    "metadata": {}
   }
