update test for ex2

--- a/Assignments/HW_25Sep/HW_25Sep_Ex4.ipynb
+++ b/Assignments/HW_25Sep/HW_25Sep_Ex4.ipynb
@@ -352,7 +352,7 @@
     "#### A brief description of the columns are:\n",
     "* age is numeric in years presumably\n",
     "* sex has been labelled 0 or 1\n",
-    "* cp is chest pain type -> 4 types -> 0,1,2,3\n",
+    "* cp is chest pain type -> 4 types -> 0,1,2,3 (checked by doing df_data['cp'].unique())\n",
     "* trestbps is the resting blood pressure, it varies between 94 and 200 (checked by doing df_data['trestbps'].min() and df_data['trestbps'].max()) -> needs to be scaled\n",
     "* chol is the serum cholestoral level in mg/dl -> needs to be scaled\n",
     "* fbs represents fasting blood sugar thats greater than 120 mg/dl -> coded as 0 or 1\n",
