--- a/Assignments/HW_25Sep/HW_25sep_Ex2.ipynb
+++ b/Assignments/HW_25Sep/HW_25sep_Ex2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 3,
    "source": [
     "import re\n",
     "from Bio import SeqIO\n",
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 4,
    "source": [
     "seq_ = 0\n",
     "seq_string = \"\"\n",
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 5,
    "source": [
     "# Counting ns at the beginning and end of the string\n",
     "print(\"number of ns in first 10000 bases: \",seq_string[:10000].count('n'))\n",
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 6,
    "source": [
     "#seq_string = seq_string[9999:-9999] \n",
     "\n",
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 7,
    "source": [
     "from hashlib import sha256\n",
     "p = 2_549_536_629_329\n",
@@ -111,13 +111,13 @@
    "cell_type": "markdown",
    "source": [
     "#### Since I'd been tinkering with multiprocessing and this process takes a lot of time I thought it would be prudent to take all sha values in a list first even though I take extra memory here, I could have instead directly calculated hash value here rather than storing it in a list.\n",
-    "#### **I've rewritten the corrected code after the \"Run over all sha values in lst_finalb\" section."
+    "#### **I've rewritten the corrected code after the \"Run over all sha values in lst_finalb\" section. Tests for the code follow that section"
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "source": [
     "# One pass quicker method to achieve the splits\n",
     "# Using a list here instead of np array since np array append creates a copy of the list while list append adds to the original list. Will convert the final list of sha values to an np array.\n",
@@ -169,21 +169,6 @@
     "lst_finalb = np.array(lst_finalb,int)"
    ],
    "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "## Run tests on a much smaller piece of data\n",
-    "#### **Note: Ran the same test for the new function getnMers_updated below, with random sample of 10000 base pairs from seq_\n",
-    "## Ran the test 100 times and take mean of values generated in the tests. I used the following 2 methods to test:\n",
-    "#### For the test I thought I should randomly pull 100 sha values from lst_finalb, compute the 100 hashes for each sha value, and for each hash function we store the minimum most value, to estimate unique elements we take the average of these hash values, subtract one from inverse of average and see how deviated that value is from 100.\n",
-    "\n",
-    "#### The other test is to calculate estimate based on each hash value, and take median of these values.\n",
-    "\n",
-    "* method 1: 1/avg(hash_values) - 1\n",
-    "* method 2: median(1/hash_value - 1 for all hash_values)\n"
-   ],
    "metadata": {}
   },
   {
@@ -289,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 13,
    "source": [
     "\n",
     "def getNmers_updated(seq_,interval = 15,disable_ = False):\n",
@@ -322,16 +307,52 @@
    "source": [
     "## Run test for getNmers_updated, will run for randomly selected sequence of 10000 base pairs\n",
     "\n",
-    "#### The test remains the same except I thought I was taking too small a subset so will randomly take 10000 bps sequence and compute everything like above, since our counter gives close to 10000 values and using these methods we're getting comparable values the code may be fine. Having lst_finalb above could be really helpful in this regard since then I know exactly how many unique hashes are there."
+    "## Ran the test 100 times and take mean of values generated in the tests. I used the following 2 methods to test:\n",
+    "#### For the test I thought I should randomly take sample of 10000 base pairs from seq_, compute the 100 hashes for each sha value, and for each hash function we store the minimum most value, \n",
+    "\n",
+    "#### To estimate unique elements one test is we take the average of these hash values, subtract one from inverse of average and see how deviated that value is from unique sequences calculated using getNmers_test.\n",
+    "\n",
+    "#### The other test is to calculate estimate based on each hash value, and take median of these values.\n",
+    "\n",
+    "* method 1: 1/avg(hash_values) - 1\n",
+    "* method 2: median(1/hash_value - 1 for all hash_values)\n",
+    "\n",
+    "####  Having lst_finalb above could be really helpful in this regard since then I know exactly how many unique hashes are there."
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": null,
+   "source": [
+    "## Function to get true value\n",
+    "def getNmers_test(seq_,interval = 15):\n",
+    "    nmer_vals = []\n",
+    "    counter_ = 0\n",
+    "    for i in range(len(seq_) - interval + 1):\n",
+    "        nmerb = seq_[i:i+interval]\n",
+    "        counter_+=1\n",
+    "        #print(nmer)\n",
+    "        if((nmerb.count(b\"n\")>2)):\n",
+    "            # print(nmer)\n",
+    "            # print(nmerb)\n",
+    "            pass\n",
+    "        else:\n",
+    "            #nmerb_sha = getshavalues(nmerb)\n",
+    "            nmer_vals.append(nmerb) ## I could have just run the hash value estimation part here and not save this as an array, however I wanted to tinker with multiprocessing and also see what the true value comes out to be so went with this instead.\n",
+    "    return len(set(nmer_vals)),counter_\n",
+    "\n"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "source": [
     "avg_method = []\n",
     "estimates_method = []\n",
+    "control_vals = []\n",
     "for test_num in tqdm(range(100)):\n",
     "    upr_bound = int(np.random.uniform(low=0.1, high=1, size=1)[0]*100000)\n",
     "    lwr_bound = upr_bound - 10000\n",
@@ -342,8 +363,12 @@
     "    estimates_method.append(median_estimate[0])\n",
     "    mean_val = len(min_hashes)/sum(min_hashes) - 1\n",
     "    avg_method.append(mean_val[0])\n",
+    "    control_val,control_withd = getNmers_test(seq_smpl)\n",
+    "    control_vals.append(control_val)\n",
+    "\n",
     "print(\"Thus estimate based on inverse of average hash value is:\", statistics.mean(avg_method))\n",
-    "print(\"Thus estimate based on median of estimate of each individual hash value is:\", statistics.mean(estimates_method))\n"
+    "print(\"Thus estimate based on median of estimate of each individual hash value is:\", statistics.mean(estimates_method))\n",
+    "print(\"True value without duplicates:\",statistics.mean(control_vals))\n"
    ],
    "outputs": [
     {
@@ -352,7 +377,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "89967f0bbeac41309a1244b7a1e8a8a1"
+       "model_id": "a053a46188c74f209a3054933462c3c0"
       },
       "text/plain": [
        "  0%|          | 0/100 [00:00<?, ?it/s]"
@@ -364,8 +389,9 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Thus estimate based on inverse of average hash value is: 9967.841176434398\n",
-      "Thus estimate based on median of estimate of each individual hash value is: 14899.245217796313\n"
+      "Thus estimate based on inverse of average hash value is: 10066.184432867049\n",
+      "Thus estimate based on median of estimate of each individual hash value is: 14731.973778078009\n",
+      "True value without duplicates: 9843.99\n"
      ]
     }
    ],
@@ -451,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 10,
    "source": [
     "min_hashes_unsorted = list(np.genfromtxt('hashes.csv',delimiter=','))\n",
     "min_hashes_unsorted"
@@ -564,7 +590,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 128
+     "execution_count": 10
     }
    ],
    "metadata": {}
