--- a/Assignments/HW_25Sep/HW_25sep_Ex2.ipynb
+++ b/Assignments/HW_25Sep/HW_25sep_Ex2.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "source": [
     "seq_ = 0\n",
     "seq_string = \"\"\n",
@@ -47,19 +47,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "source": [
     "# Counting ns at the beginning and end of the string\n",
-    "print(\"number of ns in first 10000 bases: \",seq_string[:10000].count('n'))\n",
-    "print(\"number of ns in last 10000 bases: \",seq_string[-10000:].count('n'))"
+    "print(\"number of ns in first 10000 bases: \",seq_[:10000].count(b'n'))\n",
+    "print(\"number of ns in last 10000 bases: \",seq_[-10000:].count(b'n'))"
    ],
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "number of ns in first 10000 bases:  0\n",
-      "number of ns in last 10000 bases:  0\n"
+      "number of ns in first 10000 bases:  10000\n",
+      "number of ns in last 10000 bases:  10000\n"
      ]
     }
    ],
@@ -325,7 +325,7 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
-    "## Function to get true value\n",
+    "## Function to get true value of sequences without duplicates\n",
     "def getNmers_test(seq_,interval = 15):\n",
     "    nmer_vals = []\n",
     "    counter_ = 0\n",
